--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -1,9 +1,10 @@
-name: Build and push `pyenv_python` image
+name: TOMASTEST - Build and push `pyenv_python` image
 
 on: [workflow_dispatch]
 
 env:
-  IMAGE_NAME: ghcr.io/espressif/github-esp-dockerfiles/pyenv_python
+  # REPO_NAME: ${{ github.event.repository.name }}
+  IMAGE_NAME: ghcr.io/${{ github.event.repository.name }}/pyenv_python
   # IMAGE_TAG:
   # IMAGE_CONTEXT:
   # IMAGE_PRATFORMS: 
