--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -4,7 +4,7 @@ on: [workflow_dispatch]
 
 env:
   # REPO_NAME: ${{ github.event.repository.name }}
-  IMAGE_NAME: ghcr.io/${{ github.event.repository.name }}/pyenv_python
+  IMAGE_NAME: ghcr.io/${{ github.repository }}/pyenv_python
   # IMAGE_TAG:
   # IMAGE_CONTEXT:
   # IMAGE_PRATFORMS: 
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Echo Magic variable
+        run: echo ${{env.IMAGE_NAME}}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
